--- a/domestic/chanjet/chanjet-Tplus-rce-GetStoreWarehouseByStore.yaml
+++ b/domestic/chanjet/chanjet-Tplus-rce-GetStoreWarehouseByStore.yaml
@@ -1,16 +1,19 @@
-id: chanjet-Tplus-rce
+id: QVD-2023-13615
 
 info:
-  name: chanjet-Tplus-rce
+  name: QVD-2023-13615
   author: hufei
   severity: critical
   description: |
-    Arbitrary file upload vulnerability in chanjet-Tplus Integrated Security Management Platform Software allows attackers to upload and execute malicious files, leading to potential unauthorized server control.
+     畅捷通 T+ 存在.net反序列化漏洞，未经过身份认证的攻击者可以通过构造恶意的序列化请求在目标服务器上执行任意命令。
   reference:
+    https://blog.csdn.net/qq_41904294/article/details/131350965
   metadata:
     max-request: 3
-    fofa-query:
-  tags: chanjet-Tplus,rce,intrusive
+    fofa-query: app="畅捷通-TPlus"
+    hunter-query: app.name="畅捷通 T+"
+    verified: true
+  tags: 2023,chanjet-Tplus,rce
 
 variables:
   dns: "{{interactsh-url}}"
