--- a/domestic/chanjet/chanjet-Tplus-upload-Upload.aspx.yaml
+++ b/domestic/chanjet/chanjet-Tplus-upload-Upload.aspx.yaml
@@ -1,16 +1,19 @@
-id: chanjet-Tplus-file-upload
+id: CNVD-2022-60632
 
 info:
   name: chanjet-Tplus-file-upload
   author: hufei
   severity: critical
   description: |
-    Arbitrary file upload vulnerability in chanjet-Tplus Integrated Security Management Platform Software allows attackers to upload and execute malicious files, leading to potential unauthorized server control.
+    漏洞影响的产品和版本：畅捷通T+单机版<=17.0且使用IIS10.0以下版本。
   reference:
+    https://blog.csdn.net/qq_50854662/article/details/127766573
   metadata:
     max-request: 2
-    fofa-query:
-  tags: chanjet-Tplus,fileupload,intrusive
+    fofa-query: app="畅捷通-TPlus"
+    hunter-query: app.name="畅捷通 T+"
+    verified: true
+  tags: 2022,chanjet-Tplus,fileupload
 
 variables:
   str1: '{{rand_base(6)}}'
