--- a/domestic/dahua/dahua-WPMS-SQL-pageJson.yaml
+++ b/domestic/dahua/dahua-WPMS-SQL-pageJson.yaml
@@ -1,16 +1,18 @@
-id: dahua-WPMS
+id: dahua-WPMS-SQL
+
 info:
-  name: dahua-WPMS
+  name: dahua-WPMS-SQL
   author: hufei
   severity: high
   description: |
-
+    大华 智慧园区综合管理平台 getFaceCapture 接口存在SQL注入漏洞，攻击者通过漏洞可以执行任意SQL语句，获取数据库敏感信息
   reference:
+    https://github.com/PeiQi0/PeiQi-WIKI-Book/tree/main/docs/wiki/iot/%E5%A4%A7%E5%8D%8E
   metadata:
     max-request: 1
     fofa-query: app="dahua-智慧园区综合管理平台"
+    hunter-query: app.name="Dahua 大华 智慧园区管理平台"
     verified: true
-    product: dahua-WPMS
   tags: 2023,HVV,dahua,SQL
 
 requests:
