--- a/domestic/hikvision/HIKVISION-iSecure-Center-upload-report.yaml
+++ b/domestic/hikvision/HIKVISION-iSecure-Center-upload-report.yaml
@@ -12,6 +12,7 @@ info:
     max-request: 2
     fofa-query: app="HIKVISION-综合安防管理平台"
     hunter-query: web.title=="综合安防管理平台
+    verified: False
   tags: HIKVISION-iSecure-Center,fileupload,rce,intrusive
 
 http:
