--- a/domestic/hikvision/HIKVISION-iVms-upload-upload.action.yaml
+++ b/domestic/hikvision/HIKVISION-iVms-upload-upload.action.yaml
@@ -11,7 +11,10 @@ info:
   metadata:
     max-request: 2
     fofa-query: icon_hash="-911494769"
-  tags: hikvision,ivms,fileupload,rce,intrusive
+    hunter-query: web.body="/views/home/file/installPackage.rar"
+    verified: true
+  tags: 2023,HVV,hikvision,ivms,upload
+
 
 variables:
   str1: '{{rand_base(6)}}'
