--- a/domestic/sangfor/Sangfor-ADRS-read-download.yaml
+++ b/domestic/sangfor/Sangfor-ADRS-read-download.yaml
@@ -9,8 +9,8 @@ info:
   metadata:
     max-request: 1
     fofa-query: app="SANGFOR-应用交付报表系统"
+    hunter-query: app.name="SANGFOR 深信服应用交付报表系统"
     verified: true
-    product: Sangfor-ADMS
   tags: 2023,HVV,Sangfor-ADMS
 
 http:
