--- a/domestic/sangfor/sangfor-dc-xxe-sangforindex.yaml
+++ b/domestic/sangfor/sangfor-dc-xxe-sangforindex.yaml
@@ -1,19 +1,19 @@
-id: NewCapec-rce
+id: sangfor-dc-xxe-sangforindex
 
 info:
-  name: NewCapec-rce
+  name: angfor-dc-xxe-sangforindex
   author: hufei
   severity: critical
   description: |
-    新开普 前置服务管理平台 service.action 接口存在远程命令执行漏洞，攻击者通过漏洞可以获取服务器权限
+      深信服数据中心管理系统DC存在XML外部实体注入漏洞。由于后端对传入的XML对象进行了非预期内解析，攻击者可以利用该漏洞进行XML注入攻击，获取系统敏感信息。
   reference:
     https://blog.csdn.net/qq_41904294/article/details/132310337
   metadata:
     max-request: 3
-    fofa-query: title="掌上校园服务管理平台"
+    fofa-query:  "SANGFOR 数据中心"
     hunter-query:
     verified: true
-  tags: 2023,HVV,NewCapec,rce
+  tags: 2023,HVV,sangfor,dc,xxe
 
 variables:
   dns: "{{interactsh-url}}"
