规则误报修改，大量规则误报，进行了一下修复

--- a/2023hvv/flyrise-fe-showimageservlet-fileread.yaml
+++ b/2023hvv/flyrise-fe-showimageservlet-fileread.yaml
@@ -24,5 +24,9 @@ requests:
       - type: word
         part: body
         words:
-          - "jdbc"
-          - "fe.db"
+          - "jdbc.user"
+          - "jdbc.password"
+        condition: and
+      - type: status
+        status:
+          - 200
